name:           Stasis
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Courtney

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   containers >=0.5.0 && <0.6,
                   time,
                   deepseq >=1.3.0 && <1.4
  ghc-options:      -Wall
  exposed-modules:  Control.Stasis
  other-modules:    Main

executable Stasis
  build-depends:   
                   base >= 4,
                   deepseq >=1.3.0 && <1.4
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Control/Stasis.hs
  other-modules:   Main

